[package]
name = "n2n-supernode-launcher"
version = "0.1.0"
description = "Windows n2n supernode launcher built with Tauri"
authors = ["Codex"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "n2n_supernode_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
